--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@json2csv/node": "^7.0.6",
+    "@types/json2csv": "^5.0.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cookies": "^0.9.1",
@@ -49,6 +51,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.4.2",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "nanoid": "^5.0.9",
