--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "ES6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "rootDir": "./src",
+    "rootDir": "./",
     "outDir": "dist",
     "strict": true,
     "noImplicitAny": true,
