--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "rootDir": "./",
-    "outDir": "dist",
+    "outDir": "build",
     "strict": true,
     "noImplicitAny": true,
     "forceConsistentCasingInFileNames": true,
