--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@json2csv/node": "^7.0.6",
     "@neondatabase/serverless": "^0.10.4",
     "@types/json2csv": "^5.0.7",
+    "@types/sequelize": "^4.28.20",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cookies": "^0.9.1",
